# GoIt_Web_HW_11

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: d3c2a232fd64_init.py
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py
src/entity/: models.py
src/repository/: contacts.py  todos.py
src/routes/: contacts.py  todos.py
src/schemas/: todo.py
